using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationString
{
    internal static string isAlive = "isAlive";
    internal static string isMoving = "isMoving";
    internal static string isJumping = "isJumping";
    internal static string isOnWall = "isOnWall";
    internal static string isOnClimbWall = "isOnClimbWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isGrounded = "isGrounded";
    internal static string isInAir = "isInAir";
    internal static string isDashing = "isDashing";
    internal static string isDashed = "isDashed";
    internal static string isHangWallDetected = "isHangWallDetected";
    internal static string isWallHanging = "isWallHanging";
    internal static string isWallJumping = "isWallJumping";
    internal static string isClimbing = "isClimbing";
    internal static string isActivated = "isActivated";
    internal static string isInvincible = "isInvincible";
    internal static string isKilledBySpikes = "isKilledBySpikes";
    internal static string isWaitForEnter = "isWaitForEnter";
    internal static string yVelocity = "yVelocity";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string spotTarget = "spotTarget";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string upInput = "upInput";

    internal static string attackTrigger = "attackTrigger";
    internal static string hitTrigger = "hitTrigger";
    internal static string wallHangTrigger = "wallHangTrigger";
    internal static string healTrigger = "healTrigger";
    internal static string saveTrigger = "saveTrigger";
    internal static string collectFloorTrigger = "collectFloorTrigger";
    internal static string collectHalfTrigger = "collectHalfTrigger";
    internal static string prayerTrigger = "prayerTrigger";
    internal static string spawnTrigger = "spawnTrigger";
    internal static string risingTrigger = "risingTrigger";
    internal static string enterLadderTrigger = "enterLadderTrigger";

}
